<resources>

    <string name="app_name">Realtime Incheon Airport</string>

    <!-- 앱 -->
    <string name="banner_ad_app_id">ca-app-pub-4803302946270084~9552446579</string>
    <!-- 배너 -->
    <string name="banner_ad_unit_id">ca-app-pub-4803302946270084/5936635198</string>
    <!-- 전면 -->
    <string name="banner_ad_fullscreen_id">ca-app-pub-4803302946270084/3042878549</string>
    <!-- 네이티브 -->
    <string name="banner_ad_native_id">ca-app-pub-4803302946270084/6023021835</string>
    <!-- 네이티브 : 종료 -->
    <string name="banner_ad_native_finish_id">ca-app-pub-4803302946270084/2072641297</string>

    <string name="api_calling_msg">Looking up data. Please wait..</string>

    <string name="realtime_gate">Real-time Departure Stations</string>
    <string name="realtime_parking_lot">Real-time parking</string>

    <string name="airport_info_title">Waiting passenger at Departure Hall</string>
    <string name="airport_info_latest_update">Last updated %1$s</string>
    <string name="airport_info_total_title">Real-time standby</string>
    <string name="airport_info_passenger_per_time">Expected passenger.</string>
    <string name="airport_info_today">today</string>
    <string name="airport_info_tomorrow">tomorrow</string>
    <string name="airport_info_at_time">%1$s/%2$s %3$s o\'clock</string>
    <string name="airport_info_wait_passenger">%1$s people</string>
    <string name="airport_info_total_wait_passenger">%1$s people in total</string>
    <string name="airport_info_wait_level_3">Very congested</string>
    <string name="airport_info_wait_level_2">confusion</string>
    <string name="airport_info_wait_level_1">usually</string>
    <string name="airport_info_wait_level_0">Smooth</string>
    <string name="airport_info_wait_level_9">End</string>
    <string name="airport_info_gate">Time zone</string>
    <string name="airport_info_gate_5">No. 5</string>
    <string name="airport_info_gate_4">No. 4</string>
    <string name="airport_info_gate_3">No. 3</string>
    <string name="airport_info_gate_2">No. 2</string>
    <string name="airport_info_update">update completed\n%1$s</string>
    <string name="airport_info_update_not_yet">You have already updated with the latest information.</string>

    <string name="parking_lot_info_title">Incheon Airport real-time parking lot</string>
    <string name="passenger_terminal">Passenger Terminal</string>
    <string name="parking_lot_info_short">Short-term</string>
    <string name="parking_lot_info_long">Long term</string>
    <string name="parking_lot_info_tower">Parking tower</string>
    <string name="parking_lot_info_full">Full</string>
    <string name="parking_lot_info_usable">%1$s available</string>

</resources>
