<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#fff">

        <TextView
            android:id="@+id/tvLatestDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#888"
            android:textSize="11dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.ycengine.incheonairport.widget.WaveView
                android:id="@+id/mWaveGate5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <com.ycengine.incheonairport.widget.WaveView
                android:id="@+id/mWaveGate4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <com.ycengine.incheonairport.widget.WaveView
                android:id="@+id/mWaveGate3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <com.ycengine.incheonairport.widget.WaveView
                android:id="@+id/mWaveGate2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="19dp"
            android:paddingRight="19dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/airport_info_bg">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="50"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="25"
                            android:gravity="right"
                            android:paddingRight="5dp">

                            <TextView
                                android:id="@+id/tvAirportGateInfo5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/label_gate_leve_0"
                                android:gravity="center"
                                android:minHeight="29dp"
                                android:minWidth="60dp"
                                android:padding="7dp"
                                android:textColor="#ffffff"
                                android:textSize="13dp"/>

                        </RelativeLayout>

                        <ImageView
                            android:id="@+id/ivAirportGateInfo5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/airport_info_gate_5"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="36"/>

                        <ImageView
                            android:id="@+id/ivAirportGateInfo2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/airport_info_gate_2"/>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="25"
                            android:gravity="left"
                            android:paddingLeft="5dp">

                            <TextView
                                android:id="@+id/tvAirportGateInfo2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/label_gate_leve_0"
                                android:gravity="center"
                                android:minHeight="29dp"
                                android:minWidth="60dp"
                                android:padding="7dp"
                                android:textColor="#ffffff"
                                android:textSize="13dp"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="37"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvAirportGateInfo4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:background="@drawable/label_gate_leve_0"
                                android:gravity="center"
                                android:minHeight="29dp"
                                android:minWidth="60dp"
                                android:padding="7dp"
                                android:textColor="#ffffff"
                                android:textSize="13dp"/>

                            <ImageView
                                android:id="@+id/ivAirportGateInfo4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/airport_info_gate_4"/>

                        </LinearLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvAirportGateInfo3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:background="@drawable/label_gate_leve_0"
                                android:gravity="center"
                                android:minHeight="29dp"
                                android:minWidth="60dp"
                                android:padding="7dp"
                                android:textColor="#ffffff"
                                android:textSize="13dp"/>

                            <ImageView
                                android:id="@+id/ivAirportGateInfo3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/airport_info_gate_3"/>

                        </LinearLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="8"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="19dp"
        android:paddingRight="19dp">

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@color/airport_level_3"/>

        <TextView
            android:id="@+id/tvAirportGateWaitLevel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/airport_info_wait_level_3"
            android:textColor="@color/airport_level_3"
            android:textSize="11dp"/>

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@color/airport_level_2"/>

        <TextView
            android:id="@+id/tvAirportGateWaitLevel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/airport_info_wait_level_2"
            android:textColor="@color/airport_level_2"
            android:textSize="11dp"/>

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@color/airport_level_1"/>

        <TextView
            android:id="@+id/tvAirportGateWaitLevel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/airport_info_wait_level_1"
            android:textColor="@color/airport_level_1"
            android:textSize="11dp"/>

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@color/airport_level_0"/>

        <TextView
            android:id="@+id/tvAirportGateWaitLevel0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/airport_info_wait_level_0"
            android:textColor="@color/airport_level_0"
            android:textSize="11dp"/>

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@color/airport_level_9"/>

        <TextView
            android:id="@+id/tvAirportGateWaitLevel9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/airport_info_wait_level_9"
            android:textColor="@color/airport_level_9"
            android:textSize="11dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#e5e5e5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#e5e5e5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="19dp">

        <TextView
            android:id="@+id/tvAirportGateInfoPassengerPerTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airport_info_passenger_per_time"
            android:textColor="#333333"
            android:textSize="16dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/mAirportGateInfoAllDayBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="19dp"
            android:paddingRight="19dp">

            <TextView
                android:id="@+id/tvAirportGateInfoAllDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airport_info_tomorrow"
                android:textColor="#888888"
                android:textSize="16dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:src="@drawable/airport_info_arrow_right"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#e5e5e5"/>

</LinearLayout>